fix: Add more contrast to description box
Note: May change the text color later to increase contrast, and revert
description box color back to the earlier blue, so the book image and
description go together better

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -223,7 +223,7 @@ div.sidebar_links {
   min-width: 140px;
   width: 100%;
   max-width: 315px;
-  background-color: #718eb1;
+  background-color: #0f3d71;
   color: #b8cf69;
 }
 
